# ToDo-API

./: .env  .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20230224_000001_create_user_table.rs  m20230224_000002_create_task_table.rs
src/: lib.rs  main.rs  sea_orm_migrations.rs
src/entities/: mod.rs  prelude.rs  task.rs  user.rs
src/routes/: create_task.rs  delete_tasks.rs  get_tasks.rs  mod.rs  update_task.rs
