[package]
name = "tasks_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.7", features = ["headers"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_with = "2.2.0"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
